--- a/ansible/roles/setup/templates/k8s_containerfile.j2
+++ b/ansible/roles/setup/templates/k8s_containerfile.j2
@@ -1,5 +1,3 @@
-FROM docker.io/pihole/pihole:latest
-RUN apt update && apt upgrade -y && apt install -y procps && \
-    apt autoremove -y && apt clean
-# Exponer el puerto 80
-EXPOSE 80
+FROM {{ ak8s_app_src_registry }}
+EXPOSE 3000
+
